@@ -3,6 +3,7 @@
 - [Overview](#overview)
 - [Features](#features)
     - [Screenshots](#screenshots)
+- [Quick Start](#quick-start)
 - [Trackers](#trackers)
     - [Headless](#headless)
     - [Manual Interaction](#manual-interaction)
@@ -23,16 +24,17 @@
 - [Contributing](#contributing)
     - [Requirements](#requirements)
     - [Install Git Hooks](#install-git-hooks)
-    - [Debugging Application](#debugging-application)
     - [Building And Developing In Docker](#building-and-developing-in-docker)
     - [Implementing Support For New Trackers](#implementing-support-for-new-trackers)
+    - [Debugging Application](#debugging-application)
+    - [Performance Analysis](#performance-analysis)
     - [Cloudflare Verification](#cloudflare-verification)
 
 ## Overview
 
-This is a tool used to log in to private torrent websites and take a screenshot of the user's profile page. This can be
-used to showcase stats on your current tracker as part of an application to another site. It can also be used as a
-historical record of your stats on a tracker in case it goes down or becomes otherwise unavailable.
+This is a tool used to log in to private torrent websites and take a screenshot of the user's profile page. This can be used to showcase stats on your
+current tracker as part of an application to another site. It can also be used as a historical record of your stats on a tracker in case it goes down
+or becomes otherwise unavailable.
 
 ## Features
 
@@ -40,10 +42,9 @@ historical record of your stats on a tracker in case it goes down or becomes oth
 - Requests user input for trackers with manual inputs (like Captcha, 2FA, etc.)
 - Redacts the user's sensitive information
     - There are several types of redaction:
+        - None (no redaction)
         - Blur (adds a Gaussian blur)
         - Box (draws a solid box)
-        - Text (Replaces the text)
-        - None (no redaction)
     - There following elements are currently redacted
         - Email address
         - IP address (including ISP)
@@ -79,38 +80,52 @@ Below are examples of the different types of redaction from the [MooKo](https://
 ![Box Redaction](./doc/images/MooKo_Box.png)
 
 </td>
-<td valign="top">
-
-#### Remove
-
-![Remove Redaction](./doc/images/MooKo_Remove.png)
-
-</td>
-<td valign="top">
-
-#### Text
-
-![Text Redaction](./doc/images/MooKo_Text.png)
-
-</td>
 </tr>
 </table>
 </details>
 
+## Quick Start
+
+This is the fastest way to run the application (no UI configuration required, headless trackers only).
+
+Pull the image:
+
+```bash
+docker pull zodac/tracker-profiles:latest
+```
+
+Copy [trackers_example.csv](./trackers_example.csv) to `/tmp/screenshots/trackers.csv`, then populate it with credentials for one or more
+[headless trackers](#headless):
+
+```csv
+trackerName,username,password
+Aither,myusername,mypassword
+```
+
+Run:
+
+```bash
+docker run \
+    --env TRACKER_EXECUTION_ORDER=HEADLESS \
+    -v /tmp/screenshots:/tmp/screenshots \
+    --name tracker-profiles \
+    --rm zodac/tracker-profiles:latest
+```
+
+Screenshots are saved to `/tmp/screenshots/<date>/` on your host. See [Configuration Options](#configuration-options) for the full list of settings.
+
 ## Trackers
 
-There are currently **147** supported trackers listed below. The available trackers come in the following types:
+There are currently **160** supported trackers listed below. The available trackers come in the following types:
 
 - Headless: Can run with the browser in headless mode, meaning no UI browser is needed
 - Manual: There is some user interaction needed (a Captcha or 2FA to log in, etc.), requiring a UI browser
 
-The implementation for these trackers can be found in
-the [handler](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/handler) package.
+The implementation for these trackers can be found in the [handler](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/handler) package.
 
 ### Headless
 
-The following trackers do not require a UI (unless `FORCE_UI_BROWSER` has been set to **true**), and can be run in the
-background:
+The following trackers do not require a UI (unless `FORCE_UI_BROWSER` has been set to **true**), and can be run in the background:
 
 <table>
 <tr>
@@ -118,6 +133,7 @@ background:
 
 | Tracker Name (A–E)                                |
 |---------------------------------------------------|
+| [720pier](https://720pier.ru/)                    |
 | [ABTorrents](https://usefultrash.net/)            |
 | [AcrossTheTasman](https://acrossthetasman.com/)   |
 | [Aidoru!Online](https://aidoru-online.me/)        |
@@ -152,6 +168,7 @@ background:
 | [DICMusic](https://dicmusic.com/)                 |
 | [DimeADozen](http://www.dimeadozen.org/)          |
 | [Empornium](https://www.empornium.sx/)            |
+| [eMuwarez](https://emuwarez.com/)                 |
 | [ExtremeBits](https://extremebits.net/)           |
 
 </td>
@@ -162,17 +179,15 @@ background:
 | [F1Carreras](https://f1carreras.xyz/)           |
 | [F1GP](https://f1gp.site/)                      |
 | [Fappaizuri](https://fappaizuri.me/)            |
-| [FearNoPeer](https://fearnopeer.com/)           |
 | [FileList](https://filelist.io/)                |
 | [FunFile](https://www.funfile.org/)             |
+| [FunZone](https://myfunzone.org/)               |
 | [GreatPosterWall](https://greatposterwall.com/) |
 | [HappyFappy](https://www.happyfappy.net/)       |
 | [HDUnited](https://hd-united.vn/)               |
 | [Hellenic-HD](https://hellenic-hd.cc/)          |
 | [ImmortalSeed](https://immortalseed.me/)        |
 | [InfinityHD](https://infinityhd.net/)           |
-| [InfinityLibrary](https://infinitylibrary.net/) |
-| [IPTorrents](https://iptorrents.com/)           |
 | [ItaTorrents](https://itatorrents.xyz/)         |
 | [JPopsuki](https://jpopsuki.eu/)                |
 
@@ -185,15 +200,16 @@ background:
 | [Lat-Team](https://lat-team.com/)              |
 | [LDU](https://theldu.to/)                      |
 | [Libble](https://libble.me/)                   |
+| [Linuxtracker](https://linuxtracker.org/)      |
 | [Luminarr](https://luminarr.me/)               |
 | [MalayaBits](https://malayabits.cc/)           |
 | [Metal-Tracker](https://en.metal-tracker.com/) |
+| [MidnightScene](https://midnightscene.cc/)     |
 | [Milkie](https://milkie.cc/)                   |
 | [MooKo](https://mooko.org/)                    |
 | [MoreThanTV](https://www.morethantv.me/)       |
 | [MyAnonaMouse](https://www.myanonamouse.net/)  |
 | [Nebulance](https://nebulance.io/)             |
-| [Nexum-Core](https://nexum-core.com/)          |
 | [NordicBytes](https://nordicbytes.org/)        |
 | [NordicHD](http://nordichd.org/)               |
 | [NordicQuality](https://nordicq.org/)          |
@@ -213,6 +229,7 @@ background:
 | [PolishTorrent](https://polishtorrent.top/)          |
 | [Portugas](https://portugas.org/)                    |
 | [PussyTorrents](https://pussytorrents.org/)          |
+| [Racing4Everyone](https://racing4everyone.eu/)       |
 | [Rastastugan](https://rastastugan.org/)              |
 | [Redacted](https://redacted.sh/)                     |
 | [ReelFlix](https://reelflix.cc/)                     |
@@ -224,6 +241,7 @@ background:
 | [SecretCinema](https://secret-cinema.pw/)            |
 | [SeedPool](https://seedpool.org/)                    |
 | [SexTorrent](https://sextorrent.myds.me/)            |
+| [Shadowbit](https://shadowbit.cc/)                   |
 | [Shazbat](https://www.shazbat.tube/)                 |
 | [SlobitMedia](https://media.slo-bitcloud.eu/)        |
 | [SpeedApp](https://speedapp.io/)                     |
@@ -233,6 +251,7 @@ background:
 | [TeamOS](https://teamos.xyz/)                        |
 | [TheMixingBowl](https://themixingbowl.org/)          |
 | [Torr9](https://torr9.net/)                          |
+| [Torrenteros](https://torrenteros.org/)              |
 | [TorrentLeech](https://www.torrentleech.org/)        |
 | [TranceTraffic](https://www.trancetraffic.com/)      |
 | [TVChaosUK](https://tvchaosuk.com/)                  |
@@ -246,6 +265,7 @@ background:
 | [VietMediaF](https://tracker.vietmediaf.store/) |
 | [XSpeeds](https://www.xspeeds.eu/)              |
 | [XWT-Classics](https://xwt-classics.net/)       |
+| [YggReborn](https://www.yggreborn.org/)         |
 | [YUSCENE](https://yu-scene.net/)                |
 | [Zappateers](https://zappateers.com/)           |
 
@@ -269,10 +289,12 @@ Docker Compose setup — see [Web UI](#web-ui) for details.
 | [AnimeZ](https://animez.to/)                        | Captcha                                         |
 | [AvistaZ](https://avistaz.to/)                      | Captcha & Cloudflare verificaiton               |
 | [BeyondHD](https://beyond-hd.me/)                   | Captcha                                         |
+| [Baozi](https://p.t-baozi.cc/)                      | Captcha & Cloudflare verification               |
 | [BroadcasThe.Net](https://broadcasthe.net/)         | Captcha & Cloudflare verification               |
 | [BTArg](https://www.btarg.com.ar/tracker/)          | Needs to be explicitly translated               |
 | [CGPeers](https://cgpeers.to/)                      | 2FA & Cloudflare verification                   |
 | [CinemaZ](https://cinemaz.to/)                      | Captcha & Cloudflare verification               |
+| [CZTeam](https://czteam.me/)                        | Cloudflare verification                         |
 | [DigitalCore.Club](https://digitalcore.club/)       | Captcha                                         |
 | [DocsPedia](https://docspedia.world/)               | Captcha                                         |
 | [ExoticaZ](https://exoticaz.to/)                    | Captcha & Cloudflare verification               |
@@ -281,14 +303,18 @@ Docker Compose setup — see [Web UI](#web-ui) for details.
 | [HD-Forever](https://hdf.world/)                    | Needs to be explicitly translated               |
 | [HDBits](https://hdbits.org/)                       | 2FA, Cloudflare verification, question on login |
 | [HDFans](https://hdfans.org/)                       | Captcha                                         |
-| [Immortal-S](https://immortal-s.me/)                | Cloudflare verification                         |
 | [HDZero](https://hdzero.org/)                       | Cloudflare verification                         |
+| [Immortal-S](https://immortal-s.me/)                | Cloudflare verification                         |
+| [IPTorrents](https://iptorrents.com/)               | Cloudflare verification                         |
 | [LastFiles](https://last-torrents.org/)             | Cloudflare verification                         |
 | [Leech24](https://leech24.net/)                     | Captcha                                         |
 | [LemonHD](https://lemonhd.net/)                     | Captcha                                         |
 | [LetSeed](https://letseed.org/)                     | Captcha                                         |
+| [LongPT](https://longpt.org/)                       | Captcha & Cloudflare verification               |
 | [LP-Bits](https://lp-bits.com/)                     | Captcha                                         |
 | [LST](https://lst.gg/)                              | Question on login                               |
+| [Milnueve](https://milnueve.cc/)                    | Cloudflare verification                         |
+| [Nexum-Core](https://nexum-core.com/)               | Needs to be explicitly translated               |
 | [PassThePopcorn](https://passthepopcorn.me/)        | Question on login                               |
 | [PornoLab](https://pornolab.net/forum/tracker.php)  | Needs to be explicitly translated               |
 | [PrivateHD](https://privatehd.to/)                  | Captcha & Cloudflare verification               |
@@ -304,7 +330,9 @@ Docker Compose setup — see [Web UI](#web-ui) for details.
 | [ThePlace](https://theplace.click/)                 | Captcha                                         |
 | [TheShow](https://theshow.click/)                   | Captcha                                         |
 | [TheVault](https://thevault.click/)                 | Captcha                                         |
+| [TorrentDay](https://www.torrentday.com/)           | Cloudflare verification                         |
 | [Torrenting](https://torrenting.com/)               | Cloudflare verification                         |
+| [Ultrabits](https://ultrabits.org/)                 | Cloudflare verification                         |
 | [UploadCX](https://upload.cx/)                      | Captcha                                         |
 
 </td>
@@ -315,13 +343,12 @@ Docker Compose setup — see [Web UI](#web-ui) for details.
 
 ### Tracker Definitions
 
-First, copy the [trackers_example.csv](./docker/trackers_example.csv) file. This file needs to be updated with your
-user's login information for each tracker. Any unwanted trackers can be deleted, or prefixed by the `CSV_COMMENT_SYMBOL`
-environment variable so they are excluded. The tracker names are case-insensitive.
+First, copy the [trackers_example.csv](trackers_example.csv) file. This file needs to be updated with your user's login information for each tracker.
+Any unwanted trackers can be deleted, or prefixed by the `CSV_COMMENT_SYMBOL` environment variable so they are excluded. The tracker names are
+case-insensitive.
 
-The file can be saved anywhere but needs to be mounted into the Docker container, and it will be referenced by the
-`TRACKER_INPUT_FILE_PATH` environment variable when running the application, so remember where it is saved and what it
-is named.
+The file can be saved anywhere but needs to be mounted into the Docker container, and it will be referenced by the `TRACKER_INPUT_FILE_PATH`
+environment variable when running the application, so remember where it is saved and what it is named.
 
 ### Running In Docker
 
@@ -358,65 +385,79 @@ re-enabled once execution completes, allowing another run to be started.
 
 The following are all possible configuration options, defined as environment variables for the docker image:
 
-| Environment Variable                | Description                                                                                                                                                                                              | Default Value                 |
-|-------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------|
-| *BROWSER_HEIGHT*                    | The height (in pixels) of the web browser used to take screenshots                                                                                                                                       | 1050                          |
-| *BROWSER_WIDTH*                     | The width (in pixels) of the web browser used to take screenshots                                                                                                                                        | 1680                          |
-| *CSV_COMMENT_SYMBOL*                | If this character is the first in a CSV row, the CSV row is considered a comment and not processed                                                                                                       | #                             |
-| *ENABLE_ADULT_TRACKERS*             | Whether to take screenshots of trackers that primarily host adult content                                                                                                                                | true                          |
-| *ENABLE_TRANSLATION_TO_ENGLISH*     | Whether to translate non-English trackers to English                                                                                                                                                     | true                          |
-| *FAIL_ON_UNSUPPORTED_TRACKER*       | Whether to fail if a tracker in the CSV file has no matching handler implementation                                                                                                                      | true                          |
-| *FORCE_UI_BROWSER*                  | Forces a browser with UI for each tracker (even for headless trackers)                                                                                                                                   | false                         |
-| *INPUT_TIMEOUT_ENABLED*             | Whether to add a timeout for when a user-input is required, otherwise waits                                                                                                                              | false                         |
-| *INPUT_TIMEOUT_SECONDS*             | If *INPUT_TIMEOUT_ENABLED* is enabled, how long to wait for a user-input in [seconds]                                                                                                                    | 300                           |
-| *JAVA_XMS*                          | The initial heap size for the Java process                                                                                                                                                               | 128m                          |
-| *JAVA_XMX*                          | The maximum heap size for the Java process                                                                                                                                                               | 512m                          |
-| *LOG_LEVEL*                         | The logging level for console output [TRACE, DEBUG, INFO, WARN, ERROR]                                                                                                                                   | INFO                          |
-| *LOG_TRACKER_NAME*                  | Whether to prefix each log message with the name of the tracker being screenshot                                                                                                                         | true                          |
-| *NUMBER_OF_TRACKER_ATTEMPTS*        | The number of times to attempt to screenshot a tracker (with retries if it fails or the wrong manual input was selected) [max of 5]                                                                      | 1                             |
-| *OUTPUT_DIRECTORY_NAME_FORMAT*      | The name of the output directory to be created for the of the screenshots (see [Patterns for Formatting and Parsing](https://docs.oracle.com/javase/8/docs/api/java/time/format/DateTimeFormatter.html)) | yyyy-MM-dd                    |
-| *OUTPUT_DIRECTORY_PARENT_PATH*      | The output location of the new directory created for the screenshots, relative to the project root                                                                                                       | /tmp/screenshots              |
-| *PROGRESS_BAR_COMPLETE_CHARACTER*   | The character used to render the completed portion of the [progress bar](#progress-bar) (must differ from *PROGRESS_BAR_INCOMPLETE_CHARACTER*                                                            | █                             |
-| *PROGRESS_BAR_ENABLED*              | Whether to render a progress bar at the bottom of the console output                                                                                                                                     | true                          |
-| *PROGRESS_BAR_FORMAT*               | The format string for the [progress bar](#progress-bar) (must not be blank)                                                                                                                              | :bar :percent% \| [:elapsed]  |
-| *PROGRESS_BAR_INCOMPLETE_CHARACTER* | The character used to render the incomplete portion of the [progress bar](#progress-bar) (must differ from *PROGRESS_BAR_COMPLETE_CHARACTER*                                                             | ░                             |
-| *PROGRESS_BAR_LENGTH*               | The length (in characters) of the [progress bar](#progress-bar) [min: 10, max: 80]                                                                                                                       | 35                            |
-| *REDACTION_TEXT*                    | The placeholder text used to replace sensitive information (only when using TEXT redaction, will be truncated if longer than the sensitive information)                                                  | ----                          |
-| *REDACTION_TYPE*                    | Comma-separated list of redaction types to apply (if more than one is selected then multiple screenshots will be taken) [NONE, BLUR, BOX, REMOVE, TEXT]                                                  | BOX                           |
-| *SCREENSHOT_EXISTS_ACTION*          | What to do when a screenshot for the tracker for the given date already exists [CREATE_ANOTHER, OVERWRITE, SKIP]                                                                                         | CREATE_ANOTHER                |
-| *SELENIUM_REMOTE_URL*               | The URL of the Selenium Grid or standalone node to use for browser automation; if blank, a local ChromeDriver is used                                                                                    | (empty)                       |
-| *TAKE_SCREENSHOT_ON_ERROR*          | Whether to take a screenshot of the current tracker page if any failure occurs (in a subdirectory called `errors`)                                                                                       | false                         |
-| *TIMEZONE*                          | The local timezone, used to retrieve the current date to name the output directory                                                                                                                       | UTC                           |
-| *TRACKER_EXECUTION_ORDER*           | The order in which different tracker types should be executed, at least one must be selected (case-insensitive)                                                                                          | HEADLESS,MANUAL               |
-| *TRACKER_INPUT_FILE_PATH*           | The path to the input tracker definition CSV file (inside the docker container)                                                                                                                          | /tmp/screenshots/trackers.csv |
+| Environment Variable                | Description                                                                                                                                                                                                                            | Default Value                 |
+|-------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------|
+| *BROWSER_HEIGHT*                    | The height (in pixels) of the web browser used to take screenshots                                                                                                                                                                     | 1050                          |
+| *BROWSER_WIDTH*                     | The width (in pixels) of the web browser used to take screenshots                                                                                                                                                                      | 1680                          |
+| *CSV_COMMENT_SYMBOL*                | If this character is the first in a CSV row, the CSV row is considered a comment and not processed                                                                                                                                     | #                             |
+| *ENABLE_ADULT_TRACKERS*             | Whether to take screenshots of trackers that primarily host adult content                                                                                                                                                              | true                          |
+| *ENABLE_TRANSLATION_TO_ENGLISH*     | Whether to translate non-English trackers to English                                                                                                                                                                                   | true                          |
+| *FAIL_ON_UNSUPPORTED_TRACKER*       | Whether to fail if a tracker in the CSV file has no matching handler implementation                                                                                                                                                    | true                          |
+| *FORCE_UI_BROWSER*                  | Forces a browser with UI for each tracker, even for headless trackers (this will disable parallel execution)                                                                                                                           | false                         |
+| *INPUT_TIMEOUT_ENABLED*             | Whether to add a timeout for when a user-input is required, otherwise waits                                                                                                                                                            | false                         |
+| *INPUT_TIMEOUT_SECONDS*             | If *INPUT_TIMEOUT_ENABLED* is enabled, how long to wait for a user-input in [seconds]                                                                                                                                                  | 300                           |
+| *JAVA_ADDITIONAL_OPTS*              | Additional JVM options to be appended to [start.sh](./docker/scripts/start.sh)                                                                                                                                                         |                               |
+| *JAVA_OPTS*                         | Replaces all default JVM options entirely; if unset or empty, the built-in defaults are used (see [JVM Options](#jvm-options))                                                                                                         |                               |
+| *LOG_LEVEL*                         | The logging level for console output [ALL, TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF](https://logging.apache.org/log4j/2.x/manual/customloglevels.html)                                                                              | INFO                          |
+| *LOG_TRACKER_NAME*                  | Whether to prefix each log message with the name of the tracker being screenshot                                                                                                                                                       | true                          |
+| *NUMBER_OF_PARALLEL_THREADS*        | The number of parallel browser threads to use for Headless trackers [min: 1, max: 32]                                                                                                                                                  | 5                             |
+| *NUMBER_OF_SCREENSHOT_ATTEMPTS*     | The number of times to attempt to screenshot a tracker before marking it as a fail [min: 1, max: 5]                                                                                                                                    | 1                             |
+| *OUTPUT_DIRECTORY_NAME_FORMAT*      | The name of the output directory to be created for the of the screenshots (see [Patterns for Formatting and Parsing](https://docs.oracle.com/javase/8/docs/api/java/time/format/DateTimeFormatter.html))                               | yyyy-MM-dd                    |
+| *OUTPUT_DIRECTORY_PARENT_PATH*      | The output location of the new directory created for the screenshots, relative to the project root                                                                                                                                     | /tmp/screenshots              |
+| *PROGRESS_BAR_COMPLETE_CHARACTER*   | The character used to render the completed portion of the [progress bar](#progress-bar) (must differ from *PROGRESS_BAR_INCOMPLETE_CHARACTER*                                                                                          | █                             |
+| *PROGRESS_BAR_ENABLED*              | Whether to render a progress bar at the bottom of the console output                                                                                                                                                                   | true                          |
+| *PROGRESS_BAR_FORMAT*               | The format string for the [progress bar](#progress-bar) (must not be blank)                                                                                                                                                            | :bar :percent% \| [:elapsed]  |
+| *PROGRESS_BAR_INCOMPLETE_CHARACTER* | The character used to render the incomplete portion of the [progress bar](#progress-bar) (must differ from *PROGRESS_BAR_COMPLETE_CHARACTER*                                                                                           | ░                             |
+| *PROGRESS_BAR_LENGTH*               | The length (in characters) of the [progress bar](#progress-bar) [min: 10, max: 80]                                                                                                                                                     | 35                            |
+| *REDACTION_TYPE*                    | Comma-separated list of redaction types to apply (if more than one is selected then multiple screenshots will be taken) [BLUR, BOX, NONE](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/redaction/RedactionType.java) | BOX                           |
+| *SCREENSHOT_EXISTS_ACTION*          | What to do when a screenshot for the tracker for the given date already exists [CREATE_ANOTHER, OVERWRITE, SKIP](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/framework/config/ExistingScreenshotAction.java)        | CREATE_ANOTHER                |
+| *SELENIUM_REMOTE_URL*               | The URL of the Selenium Grid or standalone node to use for browser automation; if blank, a local ChromeDriver is used                                                                                                                   | (empty)                       |
+| *TAKE_SCREENSHOT_ON_ERROR*          | Whether to take a screenshot of the current tracker page if any failure occurs (in a subdirectory called `errors`)                                                                                                                     | false                         |
+| *TIMEZONE*                          | The local timezone, used to retrieve the current date to name the output directory                                                                                                                                                     | UTC                           |
+| *TRACKER_EXECUTION_ORDER*           | The order in which different tracker types should be executed, at least one must be selected (case-insensitive)                                                                                                                        | HEADLESS,MANUAL               |
+| *TRACKER_INPUT_FILE_PATH*           | The path to the input tracker definition CSV file (inside the docker container)                                                                                                                                                        | /tmp/screenshots/trackers.csv |
+
+#### JVM Options
+
+The following options are passed to the Java process by default:
+
+```text
+-Xms128m -Xmx512m
+-XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders
+-XX:+UseG1GC -XX:ParallelGCThreads=4 -XX:ConcGCThreads=2 -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=45
+-XX:SharedArchiveFile=/app/app.jsa -Xshare:auto
+-Djava.util.logging.config.file=/app/logging.properties
+```
+
+Set `JAVA_OPTS` to replace all defaults entirely (e.g., to swap the GC algorithm or remove experimental flags). Set `JAVA_ADDITIONAL_OPTS` to append
+extra flags on top of whichever options are active, which can be useful for enabling JFR recording, GC logging, or similar diagnostics.
 
 #### Progress Bar
 
-The progress bar is rendered at the bottom of the console output during execution, showing overall screenshot progress.
-It is powered by the [Clique](https://github.com/kusoroadeolu/Clique) library.
+The progress bar is rendered at the bottom of the console output during execution, showing overall screenshot progress. It is powered by
+the [Clique](https://github.com/kusoroadeolu/Clique) library.
 
-The bar advances in fine-grained steps (login, profile page, each screenshot, logout) so the fill and percentage move
-smoothly. A tracker counter (`X/Y`) is always appended to the right of the rendered format string, showing how many
-trackers have fully completed regardless of how the format string is configured.
+The bar advances in fine-grained steps (login, profile page, each screenshot, logout) so the fill and percentage move smoothly. A tracker counter (
+`X/Y`) is always appended to the right of the rendered format string, showing how many trackers have fully completed regardless of how the format
+string is configured.
 
 The format string supports the following tokens, as defined in the
 [Clique source](https://github.com/kusoroadeolu/Clique/blob/main/docs/progress-bars.md):
 
-| Token       | Description                                                                        |
-|-------------|------------------------------------------------------------------------------------|
-| `:bar`      | The rendered progress bar itself                                                   |
-| `:elapsed`  | Time elapsed since the bar was started                                             |
-| `:percent`  | Completion percentage (0–100), based on workflow steps not tracker count           |
-| `:progress` | Number of completed internal ticks (workflow steps, not trackers) — see note below |
-| `:total`    | Total number of internal ticks (workflow steps, not trackers) — see note below     |
+| Token       | Description                                                              |
+|-------------|--------------------------------------------------------------------------|
+| `:bar`      | The rendered progress bar itself                                         |
+| `:elapsed`  | Time elapsed since the bar was started                                   |
+| `:percent`  | Completion percentage (0–100), based on workflow steps not tracker count |
+| `:progress` | Number of completed internal ticks (workflow steps, not trackers)        |
+| `:total`    | Total number of internal ticks (workflow steps, not trackers)            |
 
-> **Note:** `:progress` and `:total` reflect the internal tick count used to drive the bar fill (workflow steps), not
-> the number of trackers. For a tracker counter, use the `X/Y` suffix that is always appended to the bar.
+> **Note:** `:progress` and `:total` reflect the internal tick count used to drive the bar fill (workflow steps), not the number of trackers. For a
+> tracker counter, use the `X/Y` suffix that is always appended to the bar.
 
-> **Note:** When the JVM's native encoding is not UTF-8, multibyte characters passed via environment variable (such as
-> `█` and `░`) may arrive as individual bytes rather than a single character. I try to convert these appropriately, but
-> it doesn't always work. If you're having issues, try to use plain ASCII characters, or use the defaults. Feel free to
-> raise an issue and I can look into it.
+> **Note:** When the JVM's native encoding is not UTF-8, multibyte characters passed via environment variable (such as `█` and `░`) may arrive as
+> individual bytes rather than a single character. I try to convert these appropriately, but it doesn't always work. If you're having issues, try to
+> use plain ASCII characters, or use the defaults. Feel free to raise an issue and I can look into it.
 
 ## Versioning
 
@@ -426,20 +467,19 @@ This project follows [Semantic Versioning](https://semver.org/) (`MAJOR.MINOR.PA
 - **MINOR**: backwards-compatible new functionality added to the public API (e.g. new configuration options or trackers)
 - **PATCH**: backwards-compatible bug fixes or code changes
 
-Changes to the [trackers_example.csv](./docker/trackers_example.csv) file are considered `MINOR` (new trackers) or
-`MAJOR` (updates to the tracker name). However, removing a tracker due to the site no longer being available is **not**
-considered a `MAJOR` change. Trackers are external to the application and not part of its public API, as their
-availability depends on third-party sites that can change or disappear at any time. Tracker removals will be released as
-`PATCH` versions.
+Changes to the [trackers_example.csv](./trackers_example.csv) file are considered `MINOR` (new trackers) or `MAJOR` (updates to the tracker
+name). However, removing a tracker due to the site no longer being available is **not** considered a `MAJOR` change. Trackers are external to the
+application and not part of its public API, as their availability depends on third-party sites that can change or disappear at any time. Tracker
+removals will be released as `PATCH` versions.
 
 ## AI Usage
 
-I use AI agents to perform the "first-pass" implementation for a new tracker site. The AI will investigate and evaluate
-the generate structure of the site and build an initial handler. Based off of this, I'll refine and test until I'm
-happy that it matches the same standards as the existing implementations.
+I use AI agents to perform the "first-pass" implementation for a new tracker site. The AI will investigate and evaluate the generate structure of the
+site and build an initial handler. Based off of this, I'll refine and test until I'm happy that it matches the same standards as the existing
+implementations.
 
-Since there were over 100 implementations prior to using AI, there are established patterns and styles to follow,
-hopefully guiding the AI to follow the same standards.
+Since there were over 100 implementations prior to using AI, there are established patterns and styles to follow, hopefully guiding the AI to follow
+the same standards.
 
 ### AI Agents
 
@@ -458,42 +498,38 @@ hopefully guiding the AI to follow the same standards.
 Every implementation relies on:
 
 - **Existing handler code**: The agents study the handlers already in
-  the [handler/](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/handler) package to understand project
-  conventions, selector construction patterns, and platform-specific base classes (`Unit3dHandler`, `GazelleHandler`,
-  etc.)
-- **[CLAUDE.md](./.claude/CLAUDE.md)**: This defines project-level standards covering structure, selector conventions,
-  linting rules, and the mandatory post-implementation checklist
-- **Agent definitions**: Each agent has a [Markdown](.claude/agents) file defining its scope, and how to parse the
-  tracker to build the handler, which is refined over time
+  the [handler/](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/handler) package to understand project conventions, selector
+  construction patterns, and platform-specific base classes (`Unit3dHandler`, `GazelleHandler`, etc.)
+- **[CLAUDE.md](./.claude/CLAUDE.md)**: This defines project-level standards covering structure, selector conventions, linting rules, and the
+  mandatory post-implementation checklist
+- **Agent definitions**: Each agent has a [Markdown](.claude/agents) file defining its scope, and how to parse the tracker to build the handler, which
+  is refined over time
 
 ### Human Review
 
-All AI-generated code is reviewed and approved before being merged, including manual testing of the new handler. Since
-each handler needs to be tested against a real site, there's no value to automating much testing, so each implementation
-will be verified manually.
+All AI-generated code is reviewed and approved before being merged, including manual testing of the new handler. Since each handler needs to be tested
+against a real site, there's no value to automating much testing, so each implementation will be verified manually.
 
 ### Exceptions
 
 #### JavaScript Redaction
 
-The [JavaScript redaction logic](./tracker-profiles-screenshots/src/main/resources/net/zodac/tracker/redaction) used in
-[BlurRedactor](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/redaction/BlurRedactor.java) and
-[BoxRedactor](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/redaction/BoxRedactor.java) is mostly AI
-created with little input from me. I don't know JavaScript well enough to perform this overlay-based redaction, but I
-verify against all tracker handlers when updates are made, to cover as many cases as possible.
+The [JavaScript redaction logic](./tracker-profiles-screenshots/src/main/resources/net/zodac/tracker/redaction) used
+in [BlurRedactor](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/redaction/BlurRedactor.java)
+and [BoxRedactor](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/redaction/BoxRedactor.java) is mostly AI created with little input
+from me. I don't know JavaScript well enough to perform this overlay-based redaction, but I verify against all tracker handlers when updates are made,
+to cover as many cases as possible.
 
 #### Progress Bar PrintStream
 
-The [ProgressBarPrintStream](tracker-profiles-screenshots/src/main/java/net/zodac/tracker/framework/progress/ProgressBarPrintStream.java)
-contains some code for handling print streams to override the default console printing of
-the [Clique progress bar](#progress-bar). I'm not super well-versed in handling streams, so I use AI to make updates and
-then verify manually afterwards.
+The [ProgressBarPrintStream](tracker-profiles-screenshots/src/main/java/net/zodac/tracker/framework/progress/ProgressBarPrintStream.java) contains
+some code for handling print streams to override the default console printing of the [Clique progress bar](#progress-bar). I'm not super well-versed
+in handling streams, so I use AI to make updates and then verify manually afterwards.
 
 ## Contributing
 
 ### Requirements
 
-- [Apache Maven](https://maven.apache.org/download.cgi)
 - [Docker](https://docs.docker.com/engine/install/)
 - [Java](https://jdk.java.net/)
 
@@ -504,19 +540,6 @@ Run the following command to run git hooks for the project:
 ```bash
 bash ./ci/hooks/setup-hooks.sh
 ```
-
-### Debugging Application
-
-Using IntelliJ, and click on **Run**> **Edit Configurations** and add the environment variables for the application.
-Once done, open
-the [ApplicationLauncher.java](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/ApplicationLauncher.java)
-and run the `main` method from the IDE.
-The [AbstractTrackerHandler.java](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/handler/AbstractTrackerHandler.java)
-implementation for each tracker is retrieved by the *trackerName* field within the CSV file.
-
-[Selenium WebDriver](https://www.selenium.dev/documentation/webdriver/) is used to control the Chromium browser running
-in the `selenium/standalone-chrome` container. The `SELENIUM_REMOTE_URL` environment variable tells the app where to
-connect.
 
 ### Building And Developing In Docker
 
@@ -532,11 +555,12 @@ ENABLE_TRANSLATION_TO_ENGLISH=true \
 FAIL_ON_UNSUPPORTED_TRACKER=false \
 INPUT_TIMEOUT_ENABLED=true \
 INPUT_TIMEOUT_SECONDS=300 \
-JAVA_XMS=128m \
-JAVA_XMX=512m \
+JAVA_ADDITIONAL_OPTS= \
+JAVA_OPTS= \
 LOG_LEVEL=TRACE \
 LOG_TRACKER_NAME=true \
-NUMBER_OF_TRACKER_ATTEMPTS=5 \
+NUMBER_OF_PARALLEL_THREADS=5 \
+NUMBER_OF_SCREENSHOT_ATTEMPTS=5 \
 OUTPUT_DIRECTORY_NAME_FORMAT=yyyy-MM-dd \
 OUTPUT_DIRECTORY_PARENT_PATH=/app/screenshots \
 PROGRESS_BAR_COMPLETE_CHARACTER='█' \
@@ -544,14 +568,13 @@ PROGRESS_BAR_ENABLED=true \
 PROGRESS_BAR_FORMAT=":bar :percent% | :progress/:total | [:elapsed]" \
 PROGRESS_BAR_INCOMPLETE_CHARACTER='░' \
 PROGRESS_BAR_LENGTH=35 \
-REDACTION_TEXT=---- \
-REDACTION_TYPE=NONE,BLUR,BOX,REMOVE,TEXT \
+REDACTION_TYPE=NONE,BLUR,BOX \
 SCREENSHOT_EXISTS_ACTION=CREATE_ANOTHER \
 TAKE_SCREENSHOT_ON_ERROR=true \
 TIMEZONE=UTC \
 TRACKER_EXECUTION_ORDER=HEADLESS \
 TRACKER_INPUT_FILE_PATH=/app/screenshots/trackers.csv \
-docker compose -f ./docker/docker-compose.yml up
+docker compose -f ./docker/docker-compose-dev.yml up
 ```
 
 ### Implementing Support For New Trackers
@@ -564,6 +587,64 @@ like [AbTorrents.java](./tracker-profiles-screenshots/src/main/java/net/zodac/tr
 
 Ensure the [TrackerType](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/framework/TrackerType.java) is
 set correctly for your tracker.
+
+### Debugging Application
+
+Rather than using debugging tools, I generally add log statements (and then tune the log level once finished debugging). But if needed, you can also
+use IDE debugging tools in IntelliJ as follows. Click on **Run**> **Edit Configurations** and add the environment variables for the application.
+Once done, open the [ApplicationLauncher.java](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/ApplicationLauncher.java) and run the
+`main` method from the IDE.
+The [AbstractTrackerHandler.java](./tracker-profiles-screenshots/src/main/java/net/zodac/tracker/handler/AbstractTrackerHandler.java) implementation
+for each tracker is retrieved by the *trackerName* field within the CSV file.
+
+[Selenium WebDriver](https://www.selenium.dev/documentation/webdriver/) is used to leverage the Chromium web browser to
+take screenshots. While the application usually runs in headless mode, this can be changed by updating the
+`FORCE_UI_BROWSER` value in the [configuration](#configuration-options). This will cause a new browser instance to
+launch when taking a screenshot, and can be used for debugging a new implementation.
+
+### Performance Analysis
+
+To generate a `.jfr` file for profiling with [Java Mission Control (JMC)](https://jdk.java.net/jmc/), build and run the JAR with JFR flags
+(environment variables are prefixed before `java`, equivalent to `--env` in the [Docker commands](#building-and-developing-in-docker)):
+
+```bash
+mvn clean install && \
+    BROWSER_HEIGHT=1050 \
+    BROWSER_WIDTH=1680 \
+    CSV_COMMENT_SYMBOL='#' \
+    ENABLE_ADULT_TRACKERS=true \
+    ENABLE_TRANSLATION_TO_ENGLISH=true \
+    FAIL_ON_UNSUPPORTED_TRACKER=false \
+    FORCE_UI_BROWSER=true \
+    INPUT_TIMEOUT_ENABLED=true \
+    INPUT_TIMEOUT_SECONDS=300 \
+    LOG_LEVEL=TRACE \
+    LOG_TRACKER_NAME=true \
+    NUMBER_OF_PARALLEL_THREADS=5 \
+    NUMBER_OF_SCREENSHOT_ATTEMPTS=5 \
+    OUTPUT_DIRECTORY_NAME_FORMAT=yyyy-MM-dd \
+    OUTPUT_DIRECTORY_PARENT_PATH=/tmp/screenshots \
+    PROGRESS_BAR_COMPLETE_CHARACTER='█' \
+    PROGRESS_BAR_ENABLED=true \
+    PROGRESS_BAR_FORMAT=":bar :percent% | :progress/:total | [:elapsed]" \
+    PROGRESS_BAR_INCOMPLETE_CHARACTER='░' \
+    PROGRESS_BAR_LENGTH=35 \
+    REDACTION_TYPE=NONE,BLUR,BOX \
+    SCREENSHOT_EXISTS_ACTION=CREATE_ANOTHER \
+    TAKE_SCREENSHOT_ON_ERROR=true \
+    TIMEZONE=UTC \
+    TRACKER_EXECUTION_ORDER=HEADLESS,MANUAL \
+    TRACKER_INPUT_FILE_PATH=/tmp/screenshots/trackers.csv \
+    java \
+        --enable-preview \
+        -Xms128m -Xmx512m \
+        -XX:+UseG1GC -XX:ParallelGCThreads=4 -XX:ConcGCThreads=2 -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=45 \
+        -XX:StartFlightRecording=filename=recording_$(date +%Y%m%d_%H%M%S).jfr,settings=profile \
+        -jar ./tracker-profiles-screenshots/target/tracker-profiles-screenshots-*.jar
+```
+
+Once the application completes, open the generated `.jfr` file in Java Mission Control to analyse CPU usage, memory allocation, GC activity, and
+thread behaviour.
 
 ### Cloudflare Verification
 
